--- a/FSXAutoSave/Properties/Settings.settings
+++ b/FSXAutoSave/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="SaveWhilePaused" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SaveEnabledOnStart" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
